file(COPY  custom_files/elliptic.hpp      DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/fc/include/fc/crypto/)
file(COPY  custom_files/file_mapping.hpp      DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/fc/include/fc/interprocess/)
file(COPY  custom_files/raw.hpp      DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/fc/include/fc/io/)
file(COPY  custom_files/reflect.hpp      DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/fc/include/fc/reflect/)
file(COPY  custom_files/elliptic_common.cpp      DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/fc/src/crypto/)
file(COPY  custom_files/elliptic_secp256k1.cpp      DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/fc/src/crypto/)
file(COPY  custom_files/file_mapping.cpp      DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/fc/src/interprocess/)
file(COPY  custom_files/array.hpp      DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/fc/include/fc/)
file(COPY  custom_files/scoped_exit.hpp      DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/fc/include/fc/)
file(COPY  custom_files/utility.hpp      DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/fc/include/fc/)

add_subdirectory( fc )
add_subdirectory( builtins )
add_subdirectory( db )
add_subdirectory( wasm-jit )
add_subdirectory( softfloat )
add_subdirectory( chain )
add_subdirectory( egenesis )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( app )
add_subdirectory( plugins )
add_subdirectory( wallet )
add_subdirectory( abi_generator )
add_subdirectory( wabt )
